        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : major
Frequency  : rare, depends on device drivers and load
Bugzilla   : 14529
Description: MDS or OSS nodes crash due to stack overflow
Details    : Code changes in 1.8.0 increased the stack usage of some functions.
	     In some cases, in conjunction with device drivers that use a lot
	     of stack the MDS (or possibly OSS) service threads could overflow
	     the stack.  One change which was identified to consume additional
	     stack has been reworked to avoid the extra stack usage.

Severity   : normal
Frequency  : occasional
Bugzilla   : 13730
Description: Do not fail import if osc_interpret_create gets -EAGAIN
Details    : If osc_interpret_create got -EAGAIN it immediately exits and 
	     wakeup oscc_waitq.  After wakeup oscc_wait_for_objects call 
	     oscc_has_objects and see OSC has no objests and call 
	     oscc_internal_create to resend create request.

Severity   : enhancement
Bugzilla   : 14858
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.5.

Severity   : enhancement
Bugzilla   : 14876
Description: Update to RHEL5 latest kernel-2.6.18-53.1.13.el5.

Severity   : normal
Frequency  : very rare
Bugzilla   : 3462
Description: Fix replay if there is an un-replied request and open
Details    : In some cases, older replay request will revert the
	     mcd->mcd_last_xid on MDS which is used to record the client's
	     latest sent request.

Severity   : enhancement
Bugzilla   : 14720
Description: Update to RHEL5 latest kernel-2.6.18-53.1.6.el5.

Severity   : enhancement
Bugzilla   : 14482
Description: Add rhel5 support to HEAD.

Serverity  : enhancement